welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:3: error: not found: value c
  c=a+b
  ^sortaSum:4: error: not found: value c
  if((10<=c)&&(c<=19))
          ^sortaSum:4: error: not found: value c
  if((10<=c)&&(c<=19))
               ^sortaSum:8: error: not found: value c
  return c
         ^