welcome.lessons.welcome.bat.bool2.SortaSum.scala.code
def sortaSum(a:Int, b:Int):Int =
{
  c=a+b
  if((10<=c)&&(c<=19))
  {
    return 20
  }
  return c
}